[package]
name = "parallel-hash-join"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
boxcar = "0.2.4"
clap = { version = "4.5.4", features = ["derive"] }
parking_lot = "0.12.1"
rand = "0.8.5"
rayon = "1.10.0"
xxhash-rust = { version = "0.8.10", features = ["xxh3"] }
zipf = "7.0.1"

[profile.release]
debug = true
